# echoes-of-the-forgotten-keep

./: .gitignore  CMakeLists.txt  README.md  installer.iss  main.cpp
asset/: map2.tmx
asset/animations/: Swordsman_animations.xml  Swordsman_idle_animations.xml
asset/dungeon/: door.gltf  wall_doorway_scaffold.gltf
asset/shaders/: fragment.glsl  quad_fragment.glsl  text_fragment.glsl  text_vertex.glsl  vertex.glsl
asset/sprites/: Swordsman_walk_animations.xml  bull_animations.xml  map.tmx
cmake/: Dependencies.cmake
docs/: ECS_ARCHITECTURE.md  EFK_Presentation.pptx  EFK_Project_Design_Document.docx  ENGINE_OVERVIEW.md  GAME_DESIGN.md  SEQUENCE_FLOW.md  desktop.ini  ~$K_Project_Design_Document.docx
engine/: CMakeLists.txt
engine/include/engine/: Application.h
engine/include/engine/core/: Application.h  ApplicationSpecification.h  Log.h  Time.h  Timestep.h
engine/include/engine/ecs/: Component.h  ComponentStorage.h  Entity.h  Registry.h  Signature.h  System.h
engine/include/engine/input/: Input.h
engine/include/engine/math/: Frustum.h  Matrix4.h
engine/include/engine/platform/: Audio.h  OpenGLContext.h  Window.h
engine/include/engine/rendering/: AnimationData.h  Animator.h  Camera.h  Light.h  Material.h  Mesh.h  QuadRenderer.h  RenderSystem.h  Renderer.h  Shader.h  TextRenderer.h  Texture.h
engine/include/engine/resources/: AnimationLoader.h  AssetManager.h  AudioEventQueue.h  AudioManager.h  MeshLoader.h  MeshManager.h  ShaderManager.h  TextureManager.h
engine/include/engine/scene/: BuildRoomSystem.h  FloorGenerator.h  Prefab.h  PrefabManager.h  RoomManager.h  Scene.h  SceneManager.h  SceneManager.inl
engine/src/: Game.cpp  Game.h  GameObject.cpp  Map.cpp  Map.h
engine/src/core/: Application.cpp  Time.cpp
engine/src/ecs/: Component.h  Entity.cpp  Entity.h  EventManager.h  Registry.cpp  System.cpp  World.h
engine/src/ecs/event/: BaseEvent.h  EventManager.h
engine/src/ecs/system/: Animation3DSystem.h  AnimationKey.h  AnimationStateSystem.h  AttachmentSystem.h  CalculateBoneTransform.h  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  CombatSystem.cpp  DestructionSystem.h  EnemyAISystem.cpp  EnemyAISystem.h  EventResponseSystem.cpp  KeyboardInputSystem.h  MovementSystem.h  RenderSystem.h
engine/src/input/: Input.cpp
engine/src/manager/: Scene.cpp  Scene.h  SceneManager.h  SceneType.h  TextureManager.cpp  TextureManager.h
engine/src/math/: Frustum.cpp
engine/src/platform/: Window.cpp
engine/src/rendering/: Animation3D.h  AnimationManager.cpp  AnimationManager.h  Animator.cpp  BoneInfo.h  Camera.cpp  Light.cpp  Material.cpp  Mesh.cpp  Mesh.h  ModelManager.cpp  ModelManager.h  QuadRenderer.cpp  RenderSystem.cpp  Renderer.cpp  Shader.cpp  TextRenderer.cpp  Texture.cpp
engine/src/resources/: AnimationLoader.cpp  AssetManager.cpp  AudioManager.cpp  MeshLoader.cpp  MeshManager.cpp  ShaderManager.cpp  TextureManager.cpp
engine/src/scene/: BuildRoomSystem.cpp  FloorGenerator.cpp  PrefabManager.cpp  RoomManager.cpp  Scene.cpp  SceneManager.cpp
engine/src/utils/: Collision.cpp  Collision.h  Vector2D.cpp  Vector2D.h
game/: CMakeLists.txt
game/include/game/: GameApp.h  GameSettings.h  GameState.h
game/include/game/components/: AI.h  AnimationState.h  AttackRequest.h  BoneAttachment.h  Collider.h  CombatState.h  ComponentEnum.h  Components.h  DamageEvent.h  Door.h  EnemyAI.h  Health.h  Lifetime.h  Player.h  Render.h  Room.h  Switch.h  Transform.h
game/include/game/scenes/: GameplayScene.h  MainMenuScene.h  PauseMenuScene.h  SettingsScene.h
game/include/game/systems/: AnimationSystem.h  AttackHitboxSystem.h  BoneAttachmentSystem.h  CameraFollowSystem.h  CollisionSystem.h  CombatInputSystem.h  CombatSystem.h  DamageSystem.h  DeathSystem.h  DebugColliderRenderer.h  DebugToggle.h  DoorAnimationHelper.h  DoorPuzzleSystem.h  DoorSystem.h  DungeonSpawnSystem.h  EnemyAISystem.h  EntitySpawnSystem.h  FPSCounter.h  HealthSystem.h  HitTimerSystem.h  LifetimeSystem.h  MovementSystem.h  RenderStats.h  RoomManager.h  RoomTransitionSystem.h  SwitchTriggerSystem.h  UISystem.h  VisibilitySystem.h
game/include/game/ui/: DebugOverlay.h  HUD.h  HealthBar.h  UIButton.h  UIRenderer.h  UISlider.h
game/src/: GameApp.cpp  GameSettings.cpp  GameState.cpp
game/src/components/: Collider.cpp  EnemyAI.cpp  Health.cpp  Player.cpp  Render.cpp  Room.cpp  Transform.cpp
game/src/entities/: Enemy.cpp  Player.cpp
game/src/scenes/: GameOverScene.cpp  GameplayScene.cpp  MainMenuScene.cpp  PauseMenuScene.cpp  SettingsScene.cpp  WinScene.cpp
game/src/systems/: AnimationSystem.cpp  AttackHitboxSystem.cpp  AudioSystem.cpp  BoneAttachmentSystem.cpp  CameraFollowSystem.cpp  CollisionSystem.cpp  CombatInputSystem.cpp  CombatSystem.cpp  DamageSystem.cpp  DeathSystem.cpp  DebugColliderRenderer.cpp  DebugToggle.cpp  DoorAnimationHelper.cpp  DoorPuzzleSystem.cpp  DoorSystem.cpp  DungeonSpawnSystem.cpp  EnemyAISystem.cpp  EntitySpawnSystem.cpp  FPSCounter.cpp  HitTimerSystem.cpp  LifetimeSystem.cpp  MovementSystem.cpp  RenderStats.cpp  RoomTransitionSystem.cpp  SwitchTriggerSystem.cpp  UISystem.cpp  VisibilitySystem.cpp
game/src/ui/: HUD.cpp  HealthBar.cpp  UIButton.cpp  UIRenderer.cpp  UISlider.cpp
playground/: CMakeLists.txt
playground/src/: Game.cpp  Game.h  GameObject.h  Map.cpp  Map.h  main.cpp
playground/src/core/: Time.cpp
src/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Shader.h  TextureManager.cpp  TextureManager.h  main.cpp
src/ecs/: Component.h  ComponentType.h  Entity.h  World.cpp  World.h
src/manager/: AssetManager.cpp  AssetManager.h  Scene.cpp  Scene.h  SceneManager.h
src/renderer/: AnimationManager.cpp  AnimationManager.h  Mesh.h  ModelManager.cpp  ModelManager.h  Shader.h
src/utils/: Collision.cpp  Collision.h  Vector2D.h
tests/: CMakeLists.txt  TestMain.cpp
tests/engine/: TestAnimator.cpp  TestECS.cpp  TestMath.cpp  TestRenderer.cpp  TestSceneManager.cpp
tests/game/: TestAnimationSystem.cpp  TestBoneAttachmentSystem.cpp  TestCollision.cpp  TestEnemyAI.cpp  TestEntitySpawnSystem.cpp  TestRoomTransitions.cpp
(+94 files in other folders)
